--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
@@ -9,17 +10,18 @@
 <meta name="generator" content="Jekyll">
 <title>Home 10 - Furnitor</title>
 
-<link rel="stylesheet" href="vendors/fontawesome-pro-5/css/all.css">
-<link rel="stylesheet" href="vendors/bootstrap-select/css/bootstrap-select.min.css">
-<link rel="stylesheet" href="vendors/slick/slick.min.css">
-<link rel="stylesheet" href="vendors/magnific-popup/magnific-popup.min.css">
-<link rel="stylesheet" href="vendors/jquery-ui/jquery-ui.min.css">
-<link rel="stylesheet" href="vendors/animate.css">
-<link rel="stylesheet" href="vendors/mapbox-gl/mapbox-gl.min.css">
+<link rel="stylesheet" href="{% static 'web/vendors/fontawesome-pro-5/css/all.css' %}">
+<link rel="stylesheet" href="{% static 'web/vendors/bootstrap-select/css/bootstrap-select.min.css' %}">
+<link rel="stylesheet" href="{% static 'web/vendors/slick/slick.min.css' %}">
+<link rel="stylesheet" href="{% static 'web/vendors/magnific-popup/magnific-popup.min.css' %}">
+<link rel="stylesheet" href="{% static 'web/vendors/jquery-ui/jquery-ui.min.css' %}">
+<link rel="stylesheet" href="{% static 'web/vendors/animate.css' %}">
+<link rel="stylesheet" href="{% static 'web/vendors/mapbox-gl/mapbox-gl.min.css' %}">
 
-<link rel="stylesheet" href="css/themes.css">
+<link rel="stylesheet" href="{% static 'web/css/themes.css' %}">
 
-<link rel="icon" href="images/favicon.html">
+<link rel="icon" href="{% static 'web/images/favicon.html' %}">
+<link href="../../fonts.googleapis.com/css26014.css?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@">
@@ -32,7 +34,7 @@
 <meta property="og:title" content="Home 10">
 <meta property="og:description" content="Furniture Shop Html Template">
 <meta property="og:type" content="website">
-<meta property="og:image" content="images/logo_01.png">
+<meta property="og:image" content="{% static 'images/logo_01.png' %}">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -48,4 +50,22 @@
   
       {% include 'web/partials/footer.html' %}
 
-<script src="../cdn-cgi/apps/head/2oc_RD5SS6wgN5SiQnSEnWVNHg8.js"></script><link href="../../fonts.googleapis.com/css26014.css?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
+<script src="../cdn-cgi/apps/head/2oc_RD5SS6wgN5SiQnSEnWVNHg8.js"></script>
+<script src="{% static 'web/vendors/jquery.min.js' %}"></script>
+<script src="{% static 'web/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
+<script src="{% static 'web/vendors/bootstrap/bootstrap.bundle.js' %}"></script>
+<script src="{% static 'web/vendors/bootstrap-select/js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'web/vendors/slick/slick.min.js' %}"></script>
+<script src="{% static 'web/vendors/waypoints/jquery.waypoints.min.js' %}"></script>
+<script src="{% static 'web/vendors/counter/countUp.js' %}"></script>
+<script src="{% static 'web/vendors/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
+<script src="{% static 'web/vendors/hc-sticky/hc-sticky.min.js' %}"></script>
+<script src="{% static 'web/vendors/jparallax/TweenMax.min.js' %}"></script>
+<script src="{% static 'web/vendors/mapbox-gl/mapbox-gl.js' %}"></script>
+<script type="text/javascript" src="../../ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
+
+
+<script src="{% static 'web/js/theme.js' %}"></script>
+
+</body>
+</html>
