--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -35,8 +35,8 @@ copper mug single-origin coffee.</p>
 <section class="pt-13">
 <div class="container">
 <div class="mb-8 mxw-110px mx-auto">
-<img data-cfsrc="{% static 'web/images/logo_circle.png' %}" alt="Logo circle" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/logo_circle.png' %}" alt="Logo circle">
+<img data-cfsrc="{% static 'web/images/Matanah favicon 2.png' %}" alt="Logo circle" style="display:none;visibility:hidden;">
+<img src="{% static 'web/images/Matanah favicon 2.png' %}" alt="Logo circle">
 </div>
 <div class="mxw-830 mx-auto">
 <h2 class="fs-30 fs-md-40 lh-15 mb-7">Having a place set aside for an activity you
@@ -119,7 +119,7 @@ casually. </p>
 </div>
 </div>
 </section>
-<section class="py-11 py-lg-15">
+<!-- <section class="py-11 py-lg-15">
 <div class="container">
 <h2 class="text-center fs-30 fs-md-40 mb-8">Our Designers</h2>
 <div class="slick-slider custom-arrow-1" data-slick-options='{"slidesToShow": 5,"infinite":true,"autoplay":true,"dots":false,"arrows":true,"responsive":[{"breakpoint": 992,"settings": {"slidesToShow":4,"dots":true,"arrows":false}},{"breakpoint": 768,"settings": {"slidesToShow": 3,"dots":true,"arrows":false}},{"breakpoint": 576,"settings": {"slidesToShow": 2,"dots":true,"arrows":false}}]}'>
@@ -185,7 +185,7 @@ casually. </p>
 </div>
 </div>
 </div>
-</section>
+</section> -->
 </main>
 
 
