--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -8,7 +8,7 @@
 <meta name="description" content="Furniture Shop Html Template">
 <meta name="author" content="">
 <meta name="generator" content="Jekyll">
-<title>Home 10 - Furnitor</title>
+<title>Matanah</title>
 
 <link rel="stylesheet" href="{% static 'web/vendors/fontawesome-pro-5/css/all.css' %}">
 <link rel="stylesheet" href="{% static 'web/vendors/bootstrap-select/css/bootstrap-select.min.css' %}">
@@ -20,7 +20,7 @@
 
 <link rel="stylesheet" href="{% static 'web/css/themes.css' %}">
 
-<link rel="icon" href="{% static 'web/images/favicon.html' %}">
+<link rel="icon" href="{% static 'web/images/Matanah favicon.png' %}">
 <link href="../../fonts.googleapis.com/css26014.css?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
 
 <meta name="twitter:card" content="summary">
