--- a/static/web/css/themes.css
+++ b/static/web/css/themes.css
@@ -69,7 +69,7 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.63;
-    color: #777;
+    color: #000;
     text-align: left;
     background-color: #fff
 }
@@ -384,7 +384,7 @@ h6,
     margin-bottom: .5rem;
     font-weight: 700;
     line-height: 1.25;
-    color: #000
+    color: #c02531
 }
 
 h1,
@@ -3226,15 +3226,15 @@ fieldset:disabled a.btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #000;
-    border-color: #000;
+    background-color: #c02531;
+    border-color: #c02531;
     box-shadow: none
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #000;
-    border-color: #000
+    background-color: #f3992d;
+    border-color: #f3992d
 }
 
 .btn-primary:focus,
@@ -3603,14 +3603,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-white {
-    color: #212529;
+    color: #c02531;
     background-color: #fff;
     border-color: #fff;
     box-shadow: none
 }
 
 .btn-white:hover {
-    color: #212529;
+    color: #c02531;
     background-color: #ececec;
     border-color: #e6e6e6
 }
@@ -3645,14 +3645,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-    color: #000;
-    border-color: #000
+    color: #c02531;
+    border-color: #c02531
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #000;
-    border-color: #000
+    background-color: #c02531;
+    border-color: #c02531
 }
 
 .btn-outline-primary:focus,
@@ -5760,7 +5760,7 @@ input[type=button].btn-block {
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: #000
+    color: #c02531
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
@@ -5776,7 +5776,7 @@ input[type=button].btn-block {
 .navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-    color: rgba(0, 0, 0, .9)
+    color: #000
 }
 
 .navbar-light .navbar-toggler {
@@ -8758,7 +8758,8 @@ button.bg-white:focus {
 
 .align-items-center {
     -ms-flex-align: center !important;
-    align-items: center !important
+    align-items: center !important;
+    
 }
 
 .align-items-baseline {
@@ -14891,7 +14892,7 @@ button.bg-white:focus {
 
     .pb-lg-15,
     .py-lg-15 {
-        padding-bottom: 7.5rem !important
+        padding-bottom: 0.5rem !important
     }
 
     .pl-lg-15,
@@ -18325,7 +18326,7 @@ button.bg-white:focus {
 }
 
 .text-primary {
-    color: #000 !important
+    color: #ed9021 !important
 }
 
 a.text-primary:hover,
@@ -25559,4 +25560,7 @@ button:focus {
 
 .gtf-back-to-top.in {
     opacity: 1
+}
+.call-color{
+    color: #c02531;
 }
