--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -2,21 +2,12 @@
 {% load static %}
 {% block content %}
 <main id="content">
-<section class="py-3 bg-color-3">
-<div class="container">
-<nav aria-label="breadcrumb">
-<ol class="breadcrumb py-0">
-<li class="breadcrumb-item"><a href="index.html">Home</a></li>
-<li class="breadcrumb-item"><a href="#"> Pages </a></li>
-<li class="breadcrumb-item active" aria-current="page">Contact</li>
-</ol>
-</nav>
-</div>
-</section>
+
 <section class="pt-10 pb-10">
 <div class="container">
 <h2 class="fs-sm-40 mb-10 text-center">Contact Us</h2>
-<div id="map" class="mapbox-gl map-point-animate" style="height: 535px" data-mapbox-access-token="pk.eyJ1IjoiZHVvbmdsaCIsImEiOiJjanJnNHQ4czExMzhyNDVwdWo5bW13ZmtnIn0.f1bmXQsS6o4bzFFJc8RCcQ" data-mapbox-options='{"center":[-106.53671888774004, 35.12362056187368],"setLngLat":[-106.53671888774004, 35.12362056187368],"zoom":5}' data-mapbox-marker='[{"position":[-106.53671888774004, 35.12362056187368],"className":"marker","backgroundImage":"images/marker-01.png","backgroundRepeat":"no-repeat","width":"70px","height":"70px"}]'></div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7824.813224842812!2d75.87424285!3d11.304961800000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65ce87a20fac9%3A0x3276df2e2890a37b!2sKunnamangalam%2C%20Kerala!5e0!3m2!1sen!2sin!4v1655448306188!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<!-- <div id="map" class="mapbox-gl map-point-animate" style="height: 535px" data-mapbox-access-token="pk.eyJ1IjoiZHVvbmdsaCIsImEiOiJjanJnNHQ4czExMzhyNDVwdWo5bW13ZmtnIn0.f1bmXQsS6o4bzFFJc8RCcQ" data-mapbox-options='{"center":[-106.53671888774004, 35.12362056187368],"setLngLat":[-106.53671888774004, 35.12362056187368],"zoom":5}' data-mapbox-marker='[{"position":[-106.53671888774004, 35.12362056187368],"className":"marker","backgroundImage":"images/marker-01.png","backgroundRepeat":"no-repeat","width":"70px","height":"70px"}]'></div> -->
 </div>
 </section>
 <div class="pb-14">
