--- a/templates/web/gallery.html
+++ b/templates/web/gallery.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <main id="content">
-<section class="py-3 bg-color-3">
+<!-- <section class="py-3 bg-color-3">
 <div class="container">
 <nav aria-label="breadcrumb">
 <ol class="breadcrumb py-0">
@@ -12,7 +12,7 @@
 </ol>
 </nav>
 </div>
-</section>
+</section> -->
 <section class="pt-10 pb-11 pb-lg-15">
 <div class="container">
 <h2 class="fs-sm-40 mb-11 text-center">Our Journal</h2>
@@ -23,18 +23,7 @@
 <img data-cfsrc="{% static 'web/images/blog_01.jpg' %}" alt="Under the sun in Cape Town" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_01.jpg' %}" alt="Under the sun in Cape Town">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Under the sun in Cape Town</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -43,18 +32,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_02.jpg' %}" alt="Hats to Suit Your Mood" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_02.jpg' %}" alt="Hats to Suit Your Mood">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Hats to Suit Your Mood</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -63,18 +41,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_03.jpg' %}" alt="Meet the Model - Tropics" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_03.jpg' %}" alt="Meet the Model - Tropics">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Meet the Model - Tropics</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -83,18 +50,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_04.jpg' %}" alt="Under the sun in Cape Town" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_04.jpg' %}" alt="Under the sun in Cape Town">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Under the sun in Cape Town</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -103,18 +59,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_05.jpg' %}" alt="Hats to Suit Your Mood" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_05.jpg' %}" alt="Hats to Suit Your Mood">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Hats to Suit Your Mood</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
- </div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -123,18 +68,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_06.jpg' %}" alt="Meet the Model - Tropics" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_06.jpg' %}" alt="Meet the Model - Tropics">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Meet the Model - Tropics</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -143,18 +77,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_07.jpg' %}" alt="Under the sun in Cape Town" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_07.jpg' %}" alt="Under the sun in Cape Town">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Under the sun in Cape Town</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -163,18 +86,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_08.jpg' %}" alt="Hats to Suit Your Mood" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_08.jpg' %}" alt="Hats to Suit Your Mood">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Hats to Suit Your Mood</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -183,18 +95,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_09.jpg' %}" alt="Meet the Model - Tropics" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_09.jpg' %}" alt="Meet the Model - Tropics">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
- April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Meet the Model - Tropics</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -203,18 +104,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_10.jpg' %}" alt="Under the sun in Cape Town" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_10.jpg' %}" alt="Under the sun in Cape Town">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Under the sun in Cape Town</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -223,18 +113,7 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_11.jpg' %}" alt="Hats to Suit Your Mood" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_11.jpg' %}" alt="Hats to Suit Your Mood">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Hats to Suit Your Mood</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
-Read more
-</a>
-</div>
+
 </div>
 </div>
 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
@@ -243,36 +122,11 @@ Read more
 <img data-cfsrc="{% static 'web/images/blog_12.jpg' %}" alt="Meet the Model - Tropics" style="display:none;visibility:hidden;">
 <img src="{% static 'web/images/blog_12.jpg' %}" alt="Meet the Model - Tropics">
 </a>
-<div class="card-body px-0 pt-6 pb-0">
-<p class="card-text fs-12 mb-2 text-muted lh-12 text-uppercase letter-spacing-05 font-weight-500">
-April 24, 2019
-</p>
-<h3 class="card-title mb-2 fs-20">
-<a href="blog-post-01.html">Meet the Model - Tropics</a>
-</h3>
-<p class="card-text mb-4 font-weight-500">These are beautiful, well made & ortable! I bought them to wear to work & casually.</p>
-<a href="blog-post-01.html" class="fs-14 font-weight-bold border-bottom border-light-dark text-uppercase letter-spacing-05 d-inline-block border-hover-primary">
- Read more
-</a>
+
 </div>
 </div>
 </div>
-</div>
-<nav class="pt-2">
-<ul class="pagination justify-content-center align-items-center mb-0">
-<li class="page-item fs-12 d-none d-sm-block">
-<a class="page-link" href="#" tabindex="-1"><i class="far fa-angle-double-left"></i></a>
-</li>
-<li class="page-item"><a class="page-link" href="#">1</a></li>
-<li class="page-item active" aria-current="page"><a class="page-link" href="#">2</a></li>
-<li class="page-item"><a class="page-link" href="#">3</a></li>
-<li class="page-item"><a class="page-link" href="#">...</a></li>
-<li class="page-item"><a class="page-link" href="#">6</a></li>
-<li class="page-item fs-12 d-none d-sm-block">
-<a class="page-link" href="#"><i class="far fa-angle-double-right"></i></a>
-</li>
-</ul>
-</nav>
+
 </div>
 </section>
 </main>
