--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -57,8 +57,8 @@
     window.__mirage2 = {petok:"12e352e4f6b313b98e034b60c2997d8f5a48034f-1655201252-1800"};
     //]]>
     </script>
-    <img data-cfsrc="{% static 'web/images/logo.png' %}" alt="Furnitor" style="display:none;visibility:hidden;">
-    <img src="{% static 'web/images/logo.png' %}" alt="Furnitor" >
+    <img data-cfsrc="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor" style="display:none;visibility:hidden;">
+    <img src="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor" >
     </a>
     </div>
     <!-- <div class="col-xl-6">
@@ -108,62 +108,69 @@
     <div class="pl-5">Browse Categories</div>
     </a>
     <div class="dropdown-menu w-100 py-0" aria-labelledby="dropdownMenuButton1">
+    
+    {% for categories in category %}
     <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
     <div class="w-28px mr-3">
-    <img data-cfsrc="images/chair.png" alt="Chair" style="display:none;visibility:hidden;"><noscript><img src="images/chair.png" alt="Chair"></noscript>
+    <img data-cfsrc="{% static 'web/images/chair.png' %}" alt="Chair" style="display:none;visibility:hidden;">
+    <img src="{% static 'web/images/chair.png' %}" alt="Chair">
     </div>
-    <div class="media-body">Chairs
+    <div class="media-body">{{categories.title}}
     </div>
     </a>
+    {% endfor %}
+
+    {% comment %}
     <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
     <div class="w-28px mr-3">
-    <img data-cfsrc="images/desk.png" alt="Table" style="display:none;visibility:hidden;"><noscript><img src="images/desk.png" alt="Table"></noscript>
+    <img data-cfsrc="{% static 'web/images/desk.png' %}" alt="Table" style="display:none;visibility:hidden;"><img src="{% static 'web/images/desk.png' %}" alt="Table">
     </div>
     <div class="media-body">Table
     </div>
     </a>
     <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
     <div class="w-28px mr-3">
-    <img data-cfsrc="images/fish_bowl.png" alt="Accessories" style="display:none;visibility:hidden;"><noscript><img src="images/fish_bowl.png" alt="Accessories"></noscript>
+    <img data-cfsrc="{% static 'web/images/fish_bowl.png' %}" alt="Accessories" style="display:none;visibility:hidden;"><img src="{% static 'web/images/fish_bowl.png' %}" alt="Accessories">
     </div>
     <div class="media-body">Accessories
     </div>
     </a>
     <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
     <div class="w-28px mr-3">
-    <img data-cfsrc="images/sofa.png" alt="Sofa" style="display:none;visibility:hidden;"><noscript><img src="images/sofa.png" alt="Sofa"></noscript>
+    <img data-cfsrc="{% static 'web/images/sofa.png' %}" alt="Sofa" style="display:none;visibility:hidden;"><img src="{% static 'web/images/sofa.png' %}" alt="Sofa">
     </div>
     <div class="media-body">Sofa
     </div>
     </a>
     <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
     <div class="w-28px mr-3">
-    <img data-cfsrc="images/plant.png" alt="Plants" style="display:none;visibility:hidden;"><noscript><img src="images/plant.png" alt="Plants"></noscript>
+    <img data-cfsrc="{% static 'web/images/plant.png' %}" alt="Plants" style="display:none;visibility:hidden;"><img src="{% static 'web/images/plant.png' %}" alt="Plants">
     </div>
     <div class="media-body">Plants
     </div>
     </a>
     <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
     <div class="w-28px mr-3">
-    <img data-cfsrc="images/stool.png" alt="Stool" style="display:none;visibility:hidden;"><noscript><img src="images/stool.png" alt="Stool"></noscript>
+    <img data-cfsrc="{% static 'web/images/stool.png' %}" alt="Stool" style="display:none;visibility:hidden;"><img src="{% static 'web/images/stool.png' %}" alt="Stool">
     </div>
     <div class="media-body">Stool
     </div>
     </a>
     <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
     <div class="w-28px mr-3">
-    <img data-cfsrc="images/ladder.png" alt="Stands" style="display:none;visibility:hidden;"><noscript><img src="images/ladder.png" alt="Stands"></noscript>
+    <img data-cfsrc="{% static 'web/images/ladder.png' %}" alt="Stands" style="display:none;visibility:hidden;"><img src="{% static 'web/images/ladder.png' %}" alt="Stands">
     </div>
     <div class="media-body">Stands
     </div>
     </a>
+    {% endcomment %}
     </div>
     </div>
     </div>
     <div class="col-xl-9 d-flex pl-xl-8 position-static">
     <ul class="navbar-nav hover-menu main-menu px-0 mx-xl-n4">
-    <li aria-haspopup="true" aria-expanded="false" class="nav-item dropdown-item-home dropdown py-2 py-xl-5 px-0 px-xl-4">
-    <a class="nav-link  p-0" href="{% url 'web:index' %}">
+    <li aria-haspopup="true" aria-expanded="false" class=" nav-item  dropdown-item-home  dropdown py-2 py-xl-5 px-0 px-xl-4  ">
+    <a class=" {% if is_index %} nav-link {% endif %} p-0" href="{% url 'web:index' %}">
     Home
     <span class="caret"></span>
     </a>
@@ -231,7 +238,7 @@
     </ul> -->
     </li>
     <li aria-haspopup="true" aria-expanded="false" class="nav-item dropdown-item-shop dropdown py-2 py-xl-5 px-0 px-xl-4">
-    <a class="nav-link  p-0" href="{% url 'web:about' %}" >
+    <a class="{% if is_about %} nav-link {% endif %} p-0" href="{% url 'web:about' %}" >
     About
     <span class="caret"></span>
     </a>
@@ -409,7 +416,7 @@
     </div>
     <div class="col-4 h-100">
     <div class="card border-0 mt-2">
-    <img data-cfsrc="images/menu.jpg" alt="Image Menu" class="card-img" style="display:none;visibility:hidden;"><noscript><img src="images/menu.jpg" alt="Image Menu" class="card-img"></noscript>
+    <img data-cfsrc="{% static 'web/images/menu.jpg" alt="Image Menu" class="card-img" style="display:none;visibility:hidden;"><img src="{% static 'web/images/menu.jpg" alt="Image Menu" class="card-img">
     <div class="card-img-overlay d-flex flex-column pt-6 pb-5">
     <p class="text-white font-weight-600 text-center mb-0">
     Spring Season
@@ -426,8 +433,8 @@
     </div>
     </div> -->
     </li>
-    <li aria-haspopup="true" aria-expanded="false" class="nav-item dropdown-item-pages dropdown py-2 py-xl-5 px-0 px-xl-4">
-    <a class="nav-link  p-0" href="{% url 'web:product' %}" >
+    <li aria-haspopup="true" aria-expanded="false" class="nav-item dropdown py-2 py-xl-5 px-0 px-xl-4">
+    <a class=" {% if is_product %} nav-link  {% endif %}  p-0" href="{% url 'web:product' %}" >
     Product
     <span class="caret"></span>
     </a>
@@ -476,7 +483,7 @@
     </ul> -->
     </li>
     <li aria-haspopup="true" aria-expanded="false" class="nav-item dropdown-item-blog dropdown py-2 py-xl-5 px-0 px-xl-4">
-    <a class="nav-link  p-0" href="{% url 'web:gallery' %}">
+    <a class="{% if is_gallery %} nav-link  {% endif %} p-0" href="{% url 'web:gallery' %}">
     Gallery
     <span class="caret"></span>
     </a>
@@ -516,7 +523,7 @@
     </ul> -->
     </li>
     <li aria-haspopup="true" aria-expanded="false" class="nav-item dropdown-item-docs dropdown py-2 py-xl-5 px-0 px-xl-4">
-    <a class="nav-link  p-0" href="{% url 'web:contact' %}">
+    <a class="{% if is_contact %} nav-link  {% endif %}  p-0" href="{% url 'web:contact' %}">
     Contact
     <span class="caret"></span>
     </a>
@@ -574,7 +581,7 @@
     </li>
     </ul>
     <div class="pl-5 border-left-0 border-xl-left ml-auto d-none d-xl-block">
-    <a href="#" class="d-flex align-items-center justify-content-end h-100">
+    <a href="#" class="d-flex align-items-center justify-content-end h-100 call-color">
     <span class="d-block mr-2"><i class="far fa-phone-alt"></i></span>Call us
     (+1)
     866 540
