--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -122,35 +122,48 @@ Now</a>
 <div class="container">
 <h2 class="mb-8 text-center fs-30 fs-md-40">Essenstial Items</h2>
 <div class="row">
-<div class="col-sm-6 col-lg-3 mb-8" data-animate="fadeInUp">
-<div class="card border-0 hover-change-content product">
-<div class="card-img-top position-relative">
-<div style="background-image: url('{% static 'web/images/product-19.jpg' %}')" class="card-img ratio bg-img-cover-center ratio-1-1">
-</div>
-<div class="position-absolute pos-fixed-bottom px-4 px-sm-6 pb-5 d-flex w-100 justify-content-center content-change-horizontal">
-<a href="#" data-toggle="tooltip" title="Add to cart" class="add-to-cart d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle mr-2 border">
-<i class="far fa-shopping-basket"></i>
-</a>
-<a href="#" data-toggle="tooltip" title="Add to favourite" class="add-to-wishlist d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle mr-2 border">
-<i class="far fa-heart"></i>
-</a>
-<a href="#" data-toggle="tooltip" title="Add to compare" class="add-to-compare d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle mr-2 border">
-<i class="far fa-random"></i>
-</a>
-<a href="#" data-toggle="tooltip" title="Preview" class="preview d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle border">
-<i class="far fa-eye"></i>
-</a>
-</div>
-</div>
-<div class="card-body px-0 pt-4 pb-0 d-flex align-items-end">
-<div class="mr-auto">
-<a href="#" class="text-uppercase text-muted letter-spacing-05 fs-12 d-block font-weight-500">Table</a>
-<a href="#" class="font-weight-bold mt-1 d-block">Bow Chair</a>
-</div>
-<p class="text-primary mb-0 font-weight-500">$1390.00</p>
-</div>
-</div>
-</div>
+
+             {% for products in product %}
+                <div class="col-sm-6 col-lg-3 mb-6" data-animate="fadeInUp">
+                    <div class="card border-0 hover-change-content product">
+                        <div style="background-image: url('{{products.image.crop.800x800}}')"
+                            class="card-img ratio bg-img-cover-center ratio-1-1">
+                        </div>
+                        <div class="card-img-overlay d-flex py-4 py-sm-5 pl-6 pr-4">
+                            <div class="d-flex flex-column">
+                                <a href="#" class="font-weight-bold mb-1 d-block lh-12">{{products.title}}</a>
+                                <a href="#"
+                                    class="text-uppercase text-muted letter-spacing-05 fs-12 font-weight-500">{{products.category}}</a>
+                                <p class="mt-auto text-primary mb-0 font-weight-500">
+                                    &#8377; {{products.price}}</p>
+                            </div>
+                            <!-- <div class="ml-auto d-flex flex-column">
+                                <div class="my-auto content-change-vertical">
+                                    <a href="#" data-toggle="tooltip" data-placement="left" title="Add to card"
+                                        class="add-to-cart d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle mb-2 border">
+                                        <i class="far fa-shopping-basket"></i>
+                                    </a>
+                                    <a href="#" data-toggle="tooltip" data-placement="left" title="Add to favourite"
+                                        class="add-to-wishlist d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle mb-2 border">
+                                        <i class="far fa-heart"></i>
+                                    </a>
+                                    <a href="#" data-toggle="tooltip" data-placement="left" title="Add to compare"
+                                        class="add-to-compare d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle mb-2 border">
+                                        <i class="far fa-random"></i>
+                                    </a>
+                                    <a href="#" data-toggle="tooltip" data-placement="left" title="Preview"
+                                        class="preview d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle mb-2 border">
+                                        <i class="far fa-eye"></i>
+                                    </a>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+
+
+{% comment %}
 <div class="col-sm-6 col-lg-3 mb-8" data-animate="fadeInUp">
 <div class="card border-0 hover-change-content product">
 <div class="card-img-top position-relative">
@@ -354,6 +367,7 @@ Now</a>
 </div>
 </div>
 </div>
+{% endcomment %}
 </div>
 <div class="text-center">
 <a href="shop-page-04.html" class="btn btn-outline-primary text-uppercase letter-spacing-05">Shop Now</a>
@@ -484,14 +498,15 @@ Bobby Stool
 </section>
 <section class="py-11 py-lg-12">
 <div class="container">
-<h2 class="fs-30 fs-md-40 mb-9 text-center">Featured Items</h2>
+<h2 class="fs-30 fs-md-40 mb-9 text-center">Popular Items</h2>
 <div class="row">
+    {% for product in products %}
 <div class="col-md-4 mb-6" data-animate="fadeInUp">
 <div class="card border-0 hover-change-content product">
 <div class="card-img-top position-relative">
-<div style="background-image: url('{% static 'web/images/product-14.jpg' %}')" class="card-img ratio bg-img-cover-center ratio-1-1">
+<div style="background-image: url({{product.image.crop.800x800}}" class="card-img ratio bg-img-cover-center ratio-1-1">
 </div>
-<div class="position-absolute pos-fixed-bottom px-4 px-sm-6 pb-5 d-flex w-100 justify-content-center content-change-horizontal">
+<!-- <div class="position-absolute pos-fixed-bottom px-4 px-sm-6 pb-5 d-flex w-100 justify-content-center content-change-horizontal">
 <a href="#" data-toggle="tooltip" title="Add to cart" class="add-to-cart d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle mr-2 border">
 <i class="far fa-shopping-basket"></i>
 </a>
@@ -504,17 +519,20 @@ Bobby Stool
 <a href="#" data-toggle="tooltip" title="Preview" class="preview d-flex align-items-center justify-content-center text-primary bg-white hover-white bg-hover-primary w-45px h-45px rounded-circle border">
 <i class="far fa-eye"></i>
 </a>
-</div>
+</div> -->
 </div>
 <div class="card-body px-0 pt-4 pb-0 d-flex align-items-end">
 <div class="mr-auto">
-<a href="#" class="text-uppercase text-muted letter-spacing-05 fs-12 d-block font-weight-500">Table</a>
-<a href="#" class="font-weight-bold mt-1 d-block">Bow Chair</a>
+<a href="#" class="text-uppercase text-muted letter-spacing-05 fs-12 d-block font-weight-500">{{product.category}}</a>
+<a href="#" class="font-weight-bold mt-1 d-block">{{product.title}}</a>
 </div>
-<p class="text-primary mb-0 font-weight-500">$1390.00</p>
+<p class="text-primary mb-0 font-weight-500"> &#8377; {{product.price}}</p>
 </div>
 </div>
 </div>
+{% endfor %}
+
+{% comment %}
 <div class="col-md-4 mb-6" data-animate="fadeInUp">
 <div class="card border-0 hover-change-content product">
 <div class="card-img-top position-relative">
@@ -573,6 +591,7 @@ Bobby Stool
 </div>
 </div>
 </div>
+{% endcomment %}
 </div>
 </div>
 </section>
