--- a/templates/web/product.html
+++ b/templates/web/product.html
@@ -32,18 +32,20 @@
                 </div>
             </div> -->
             <div class="row mb-7 overflow-hidden">
+
+                {% for products in product %}
                 <div class="col-sm-6 col-lg-3 mb-6" data-animate="fadeInUp">
                     <div class="card border-0 hover-change-content product">
-                        <div style="background-image: url('{% static 'web/images/product-19.jpg' %}')"
+                        <div style="background-image: url('{{products.image.crop.800x800}}')"
                             class="card-img ratio bg-img-cover-center ratio-1-1">
                         </div>
                         <div class="card-img-overlay d-flex py-4 py-sm-5 pl-6 pr-4">
                             <div class="d-flex flex-column">
-                                <a href="#" class="font-weight-bold mb-1 d-block lh-12">Bow Chair</a>
+                                <a href="#" class="font-weight-bold mb-1 d-block lh-12">{{products.title}}</a>
                                 <a href="#"
-                                    class="text-uppercase text-muted letter-spacing-05 fs-12 font-weight-500">Table</a>
+                                    class="text-uppercase text-muted letter-spacing-05 fs-12 font-weight-500">{{products.category}}</a>
                                 <p class="mt-auto text-primary mb-0 font-weight-500">
-                                    $1390.00</p>
+                                    &#8377; {{products.price}}</p>
                             </div>
                             <!-- <div class="ml-auto d-flex flex-column">
                                 <div class="my-auto content-change-vertical">
@@ -68,6 +70,7 @@
                         </div>
                     </div>
                 </div>
+                {% endfor %}
 
 
 
