--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -51,6 +51,7 @@
       {% include 'web/partials/footer.html' %}
 
 <script src="../cdn-cgi/apps/head/2oc_RD5SS6wgN5SiQnSEnWVNHg8.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.15.3/dist/sweetalert2.all.min.js"></script>
 <script src="{% static 'web/vendors/jquery.min.js' %}"></script>
 <script src="{% static 'web/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
 <script src="{% static 'web/vendors/bootstrap/bootstrap.bundle.js' %}"></script>
@@ -64,7 +65,7 @@
 <script src="{% static 'web/vendors/mapbox-gl/mapbox-gl.js' %}"></script>
 <script type="text/javascript" src="../../ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
 
-
+<script src="{% static 'web/js/contact.js' %}"></script>
 <script src="{% static 'web/js/theme.js' %}"></script>
 
 </body>
