--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -2,55 +2,78 @@
 {% load static %}
 {% block content %}
 <main id="content">
-
-<section class="pt-10 pb-10">
-<div class="container">
-<h2 class="fs-sm-40 mb-10 text-center">Contact Us</h2>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7824.813224842812!2d75.87424285!3d11.304961800000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65ce87a20fac9%3A0x3276df2e2890a37b!2sKunnamangalam%2C%20Kerala!5e0!3m2!1sen!2sin!4v1655448306188!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-<!-- <div id="map" class="mapbox-gl map-point-animate" style="height: 535px" data-mapbox-access-token="pk.eyJ1IjoiZHVvbmdsaCIsImEiOiJjanJnNHQ4czExMzhyNDVwdWo5bW13ZmtnIn0.f1bmXQsS6o4bzFFJc8RCcQ" data-mapbox-options='{"center":[-106.53671888774004, 35.12362056187368],"setLngLat":[-106.53671888774004, 35.12362056187368],"zoom":5}' data-mapbox-marker='[{"position":[-106.53671888774004, 35.12362056187368],"className":"marker","backgroundImage":"images/marker-01.png","backgroundRepeat":"no-repeat","width":"70px","height":"70px"}]'></div> -->
-</div>
-</section>
-<div class="pb-14">
-<div class="container">
-<div class="row no-gutters">
-<div class="col-md-8 mb-8 mb-md-0">
-<h2 class="fs-24 mb-2">
-We would love to hear from you.
-</h2>
-<p class="mb-7">If you’ve got great products your making or looking to work with us then drop us a line.</p>
-<form>
-<div class="row mb-6">
-<div class="col-sm-6">
-<input type="text" class="form-control" placeholder="Your Name*" required>
-</div>
-<div class="col-sm-6">
-<input type="email" class="form-control" placeholder="Your Email*" required>
-</div>
-</div>
-<div class="form-group mb-4">
-<textarea class="form-control" rows="6">Comment</textarea>
-</div>
-<div class="custom-control custom-checkbox mb-6">
+    <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13" style="background-image: url('{% static 'web/images/bg-about-us.jpg' %}');">
+        <div class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
+        <div class="container">
+        <p class="text-center text-white fs-20 font-weight-bold mb-4">Matanah</p>
+        <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">Contact Us</h1>
+        </div>
+        </div>
+        </section>
+    <section class="pt-10 pb-10">
+        <div class="container">
+            <!-- <h2 class="fs-sm-40 mb-10 text-center">Contact Us</h2> -->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7824.813224842812!2d75.87424285!3d11.304961800000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65ce87a20fac9%3A0x3276df2e2890a37b!2sKunnamangalam%2C%20Kerala!5e0!3m2!1sen!2sin!4v1655448306188!5m2!1sen!2sin"
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!-- <div id="map" class="mapbox-gl map-point-animate" style="height: 535px" data-mapbox-access-token="pk.eyJ1IjoiZHVvbmdsaCIsImEiOiJjanJnNHQ4czExMzhyNDVwdWo5bW13ZmtnIn0.f1bmXQsS6o4bzFFJc8RCcQ" data-mapbox-options='{"center":[-106.53671888774004, 35.12362056187368],"setLngLat":[-106.53671888774004, 35.12362056187368],"zoom":5}' data-mapbox-marker='[{"position":[-106.53671888774004, 35.12362056187368],"className":"marker","backgroundImage":"images/marker-01.png","backgroundRepeat":"no-repeat","width":"70px","height":"70px"}]'></div> -->
+        </div>
+    </section>
+    <div class="pb-14">
+        <div class="container">
+            <div class="row no-gutters">
+                <div class="col-md-8 mb-8 mb-md-0">
+                    <h2 class="fs-24 mb-2">
+                        We would love to hear from you.
+                    </h2>
+                    <p class="mb-7">If you are looking for awesome steel furniture, feel free to connect with us.</p>
+                    <form id="form" method="POST" class="ajax reload">
+                        {% csrf_token %}
+                        <div class="row mb-6">
+                            <div class="col-sm-6">
+                                <!-- <input type="text" class="form-control" placeholder="Your Name" name="name" required> -->
+                                {{forms.name}}
+                            </div>
+                            <div class="col-sm-6">
+                                <!-- <input type="email" class="form-control" placeholder="Your Email" name="email" required> -->
+                                {{forms.email}}
+                            </div>
+                            <div class="col-sm-6 pt-3">
+                                <!-- <input type="text" class="form-control" placeholder="Your Phone" name="phone" required> -->
+                                {{forms.phone}}
+                            </div>
+                            <div class="col-sm-6 pt-3">
+                                <!-- <input type="text" class="form-control" placeholder="Subject" name="subject" required> -->
+                                {{forms.subject}}
+                            </div>
+                        </div>
+                        <div class="form-group mb-4">
+                            <!-- <textarea class="form-control" name="message"  placeholder="Comment" rows="6">Comment</textarea> -->
+                            {{forms.message}}
+                        </div>
+                        <!-- <div class="custom-control custom-checkbox mb-6">
 <input type="checkbox" class="custom-control-input" id="customCheck1">
 <label class="custom-control-label fs-15" for="customCheck1"> Save my name, email, and website in this
 browser for the next time I comment.</label>
-</div>
-<button type="submit" class="btn btn-primary text-uppercase letter-spacing-05">submit now</button>
-</form>
-</div>
-<div class="col-md-4 pl-xl-13 pl-md-6">
-<p class="font-weight-bold text-primary mb-3">Address</p>
-<address class="mb-6">
-7895 Piermont Dr NE Albuquerque,<br>
-NM 198866, See Our Stores
-</address>
-<p class="font-weight-bold text-primary mb-2">Infomation</p>
-<p class="mb-0">+391 (0)35 2568 4593</p>
-<p class="mb-7">hello@domain.com</p>
-</div>
-</div>
-</div>
-</div>
+</div> -->
+                        <button type="submit" class="btn btn-primary text-uppercase letter-spacing-05">submit
+                            now</button>
+                    </form>
+                </div>
+                <div class="col-md-4 pl-xl-13 pl-md-6">
+                    <p class="font-weight-bold text-primary mb-3">Address</p>
+                    <address class="mb-6">
+                        7895 Piermont Dr NE Albuquerque,<br>
+                        NM 198866, See Our Stores
+                    </address>
+                    <p class="font-weight-bold text-primary mb-2">Infomation</p>
+                    <p class="mb-0">+391 (0)35 2568 4593</p>
+                    <p class="mb-7">hello@domain.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 
 
