--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -3,29 +3,29 @@
     <div class="container container-xxl">
     <div class="row">
     <div class="col-lg mb-6 mb-lg-0">
-    <a href="#" class="footer-logo d-block"><img data-cfsrc="{% static 'web/images/logo.png' %}" alt="Furnitor" style="display:none;visibility:hidden;">
-        <img src="{% static 'web/images/logo.png' %}" alt="Furnitor"></a>
+    <a href="#" class="footer-logo d-block"><img data-cfsrc="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor" style="display:none;visibility:hidden;">
+        <img src="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor"></a>
     </div>
     <div class="col-sm-6 col-lg mb-6 mb-lg-0">
     <ul class="list-unstyled mb-0">
-    <li class="py-0"><a href="#" class="lh-213 font-weight-500">Contact</a> </li>
-    <li class="py-0"><a href="#" class="lh-213 font-weight-500">Returns</a> </li>
-    <li class="py-0"><a href="#" class="lh-213 font-weight-500">Submit a Returns</a> </li>
+    <li class="py-0"><a href="{% url 'web:index' %}" class="lh-213 font-weight-500">Home</a> </li>
+    <li class="py-0"><a href="{% url 'web:about' %}" class="lh-213 font-weight-500">About</a> </li>
+    <li class="py-0"><a href="/product/all/" class="lh-213 font-weight-500">Prodcut</a> </li>
     </ul>
     </div>
     <div class="col-sm-6 col-lg mb-6 mb-lg-0">
     <ul class="list-unstyled mb-0">
-    <li class="py-0"><a href="#" class="lh-213 font-weight-500">Careers</a> </li>
-    <li class="py-0"><a href="#" class="lh-213 font-weight-500">Privacy Policy</a> </li>
-    <li class="py-0"><a href="#" class="lh-213 font-weight-500">Term & Conditions</a> </li>
+    <li class="py-0"><a href="{% url 'web:gallery' %}" class="lh-213 font-weight-500">Gallery</a> </li>
+    <li class="py-0"><a href="{% url 'web:contact' %}" class="lh-213 font-weight-500">Contact</a> </li>
+    <!-- <li class="py-0"><a href="#" class="lh-213 font-weight-500">Term & Conditions</a> </li> -->
     </ul>
     </div>
-    <div class="col-sm-6 col-lg mb-6 mb-lg-0">
+    <!-- <div class="col-sm-6 col-lg mb-6 mb-lg-0">
     <ul class="list-unstyled mb-0">
     <li class="py-0"><a href="#" class="lh-213 font-weight-500">Gift Voucher</a> </li>
     <li class="py-0"><a href="#" class="lh-213 font-weight-500">Discount</a> </li>
     </ul>
-    </div>
+    </div> -->
     <div class="col-sm-6 col-lg">
     <ul class="list-inline text-lg-right">
     <li class="list-inline-item mr-4"><a href="#" class="fs-20"><i class="fab fa-pinterest-p"></i></a></li>
