--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -5,7 +5,7 @@
 <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13" style="background-image: url('{% static 'web/images/bg-about-us.jpg' %}');">
 <div class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
 <div class="container">
-<p class="text-center text-white fs-20 font-weight-bold mb-4">Furnitor Story</p>
+<p class="text-center text-white fs-20 font-weight-bold mb-4">Matanah</p>
 <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">About Us</h1>
 </div>
 </div>
@@ -15,12 +15,8 @@
 <div class="row align-items-center no-gutters flex-md-row-reverse">
 <div class="col-md-6 pl-md-6 pl-lg-13 mb-6 mb-md-0">
 <h2 class="fs-30 fs-md-60 mb-2">
-Setting <br>
-Industry
-</h2>
-<p class="mb-6"> Portland meggings chartreuse plaid palo santo, gluten-free ramps iPhone etsy salvia
-cray kombucha
-copper mug single-origin coffee.</p>
+    STEEL FURNITURE <br> MANUFACTURING COMPANY </h2>
+<p class="mb-6"> A piece of furniture adds beauty to your home or interiors. Being a leading steel furniture manufacturer in Saudi Arabia we look forward to delivering attractive designs with outstanding product quality.</p>
 <p class="counterup fs-60 text-primary font-weight-500 lh-13 mb-2" data-start="0" data-end="12346" data-decimals="0" data-duration="0" data-separator=",">12346
 </p>
 <p class="text-primary font-weight-500">Satisfied customers worldwide and growing</p>
@@ -39,18 +35,11 @@ copper mug single-origin coffee.</p>
 <img src="{% static 'web/images/Matanah favicon 2.png' %}" alt="Logo circle">
 </div>
 <div class="mxw-830 mx-auto">
-<h2 class="fs-30 fs-md-40 lh-15 mb-7">Having a place set aside for an activity you
-love makes it more likely you’ll do it.</h2>
-<p class="fs-20 text-primary font-weight-500 mb-6">Awkwardness gives me great comfort. I’ve never been
-cool, but I’ve felt
-cool. I’ve been in the cool place, but I wasn’t really cool – I was trying to pass for hip or
-cool.</p>
-<p class="mb-0">A girl should be two things: classy and fabulous. I am convinced that there can be
-luxury in
-simplicity. I wanted to dress the woman who lives and works, not the woman in a painting. It’s hard
-to balance everything. It’s always challenging. My relationships with producers or photographers –
-these are relationships that took years. I can’t get sucked into that celebrity thing, because I
-think it’s just crass. My aim is to make.</p>
+<h2 class="fs-30 fs-md-40 lh-15 mb-7 text-center">WHOLESALE MANUFACTURERS AND TRADERS OF STEEL FURNITURE</h2>
+<p class="fs-20 text-primary font-weight-500 mb-6 text-center">Real comfort, beauty and quality should reflect in every piece of furniture for your home’s desired beauty.</p>
+<p class="mb-0" style="text-align: justify;">We believe that the true beauty of any interior is the beauty of the furniture within it. Matanah is the leading manufacturer of a comprehensive range of quality Steel
+    furniture and supplier of steel bunk beds, Steel cabinets, Mattress pillows and
+    Blankets. The company was established in 1974 by Mr Abdul Rahman Abdul Azeez Abdulla Abalkhal. The company was born with his imagination and creativity, which is the ultimate reason behind the success and phenomenal growth of Matanah furniture. As of now, his son, Mr Abdul Majeed Abdul Rahman Abalkhail, plays a crucial role in managing the organization since the year 2000. Alkharj-Riyadh industrial area, Riyadh is Matanah's main furniture factory, which is fully equipped with state-of-the-art machinery throughout Saudi Arabia and the wider Middle East.</p>
 </div>
 </div>
 </section>
@@ -58,14 +47,11 @@ think it’s just crass. My aim is to make.</p>
 <div class="container">
 <div class="row align-items-center mb-4 no-gutters">
 <div class="col-md-6 pr-md-6 pr-lg-13">
-<h2 class="fs-30 fs-md-60 mb-3">
-Growing Fast
-</h2>
-<p class="mb-6"> Portland meggings chartreuse plaid palo santo, gluten-free ramps iPhone etsy salvia
-cray kombucha copper mug single-origin coffee.</p>
+<h2 class="fs-30 fs-md-60 mb-3">CUSTOMISED STEEL FURNITURE & ACCESSORIES</h2>
+<p class="mb-6" style="text-align: justify;">  Being one of the top-notch steel furniture manufacturers and traders in  Saudi we strive to preserve the beauty and comfort in every piece of furniture. We make use of the best quality materials and skilled craftsmen to create exceptional furniture for our customers.</p>
 <p class="counterup fs-60 text-primary font-weight-500 lh-13 mb-2" data-start="0" data-end="100" data-decimals="0" data-duration="0" data-separator=",">100
 </p>
-<p class="text-primary font-weight-500">Regional offices around the world</p>
+<p class="text-primary font-weight-500">Customised steel furniture and accessories</p>
 </div>
 <div class="col-md-6 mt-6 mt-md-0">
 <img data-cfsrc="{% static 'web/images/b-15.jpg' %}" alt="Growing Fast" style="display:none;visibility:hidden;"><img src="{% static 'web/images/b-15.jpg' %}" alt="Growing Fast">
@@ -75,44 +61,38 @@ cray kombucha copper mug single-origin coffee.</p>
 </section>
 <section class="py-10 bg-accent">
 <div class="container">
-<h2 class="fs-30 fs-md-40 mb-10 text-center">Core Values</h2>
+<h2 class="fs-30 fs-md-40 mb-10 text-center">ADDED BENEFITS WITH MATANAH</h2>
 <div class="row">
 <div class="col-md-4 mb-6 mb-md-0">
 <div class="card bg-transparent border-0 align-items-center">
 <div class="w-63px card-img">
-<img data-cfsrc="{% static 'web/images/fish_bowl_lg.png' %}" alt="Cruises & Water Tours" style="display:none;visibility:hidden;"><img src="{% static 'web/images/fish_bowl_lg.png' %}" alt="Cruises & Water Tours">
+<img data-cfsrc="{% static 'web/images/1.png' %}" alt="Cruises & Water Tours" style="display:none;visibility:hidden;"><img src="{% static 'web/images/1.png' %}" alt="Cruises & Water Tours">
 </div>
 <div class="card-body px-0 pt-6 text-center">
-<h3 class="card-title fs-20 mb-3">Cruises & Water Tours</h3>
-<p class="cart-text mb-0">These are beautiful, well made & ortable! I bought them to wear to
-work &
-casually. </p>
+<h3 class="card-title fs-20 mb-3">QUALITY PRODUCTS</h3>
+<p class="cart-text mb-0">Being a top-notch steel furniture manufacturer in Saudi Arabia, Matanah strives to deliver exceptional quality in every product.</p>
 </div>
 </div>
 </div>
 <div class="col-md-4 mb-6 mb-md-0">
 <div class="card bg-transparent border-0 align-items-center">
 <div class="w-63px card-img">
-<img data-cfsrc="{% static 'web/images/plant_lg.png' %}" alt="Night Life" style="display:none;visibility:hidden;"><img src="{% static 'web/images/plant_lg.png' %}" alt="Night Life">
+<img data-cfsrc="{% static 'web/images/2.png' %}" alt="Night Life" style="display:none;visibility:hidden;"><img src="{% static 'web/images/2.png' %}" alt="Night Life">
 </div>
 <div class="card-body px-0 pt-6 text-center">
-<h3 class="card-title fs-20 mb-3">Night Life</h3>
-<p class="cart-text mb-0">These are beautiful, well made & ortable! I bought them to wear to
-work &
-casually. </p>
+<h3 class="card-title fs-20 mb-3">CUSTOM DESIGNS</h3>
+<p class="cart-text mb-0">Innovative and creative designs are assured with every product of Matanah for meeting the customer requirements.  </p>
 </div>
 </div>
 </div>
 <div class="col-md-4 mb-6 mb-md-0">
 <div class="card bg-transparent border-0 align-items-center">
 <div class="w-63px card-img">
-<img data-cfsrc="{% static 'web/images/sofa_lg.png' %}" alt="Hiking" style="display:none;visibility:hidden;"><img src="{% static 'web/images/sofa_lg.png' %}" alt="Hiking">
+<img data-cfsrc="{% static 'web/images/3.png' %}" alt="Hiking" style="display:none;visibility:hidden;"><img src="{% static 'web/images/3.png' %}" alt="Hiking">
 </div>
 <div class="card-body px-0 pt-6 text-center">
-<h3 class="card-title fs-20 mb-3">Hiking</h3>
-<p class="cart-text mb-0">These are beautiful, well made & ortable! I bought them to wear to
-work &
-casually. </p>
+<h3 class="card-title fs-20 mb-3">ACCESSORIES</h3>
+<p class="cart-text mb-0">We deliver the best quality accessories along with steel furniture (mainly for beds) for the ease of customers. </p>
 </div>
 </div>
 </div>
