--- a/templates/web/gallery.html
+++ b/templates/web/gallery.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <main id="content">
-<!-- <section class="py-3 bg-color-3">
+    <!-- <section class="py-3 bg-color-3">
 <div class="container">
 <nav aria-label="breadcrumb">
 <ol class="breadcrumb py-0">
@@ -13,122 +13,144 @@
 </nav>
 </div>
 </section> -->
-<section class="pt-10 pb-11 pb-lg-15">
-<div class="container">
-<h2 class="fs-sm-40 mb-11 text-center">Our Journal</h2>
-<div class="row">
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_01.jpg' %}" alt="Under the sun in Cape Town" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_01.jpg' %}" alt="Under the sun in Cape Town">
-</a>
+    <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13"
+        style="background-image: url('{% static 'web/images/bg-about-us.jpg' %}');">
+        <div
+            class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
+            <div class="container">
+                <p class="text-center text-white fs-20 font-weight-bold mb-4">Matanah</p>
+                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">Gallery</h1>
+            </div>
+        </div>
+    </section>
+    <section class="pt-10 pb-11 pb-lg-15">
+        <div class="container">
+            <h2 class="fs-sm-40 mb-11 text-center">Our Journal</h2>
+            <div class="row">
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_01.jpg' %}" alt="Under the sun in Cape Town"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_01.jpg' %}" alt="Under the sun in Cape Town">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_02.jpg' %}" alt="Hats to Suit Your Mood" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_02.jpg' %}" alt="Hats to Suit Your Mood">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_02.jpg' %}" alt="Hats to Suit Your Mood"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_02.jpg' %}" alt="Hats to Suit Your Mood">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_03.jpg' %}" alt="Meet the Model - Tropics" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_03.jpg' %}" alt="Meet the Model - Tropics">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_03.jpg' %}" alt="Meet the Model - Tropics"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_03.jpg' %}" alt="Meet the Model - Tropics">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_04.jpg' %}" alt="Under the sun in Cape Town" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_04.jpg' %}" alt="Under the sun in Cape Town">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_04.jpg' %}" alt="Under the sun in Cape Town"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_04.jpg' %}" alt="Under the sun in Cape Town">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_05.jpg' %}" alt="Hats to Suit Your Mood" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_05.jpg' %}" alt="Hats to Suit Your Mood">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_05.jpg' %}" alt="Hats to Suit Your Mood"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_05.jpg' %}" alt="Hats to Suit Your Mood">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_06.jpg' %}" alt="Meet the Model - Tropics" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_06.jpg' %}" alt="Meet the Model - Tropics">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_06.jpg' %}" alt="Meet the Model - Tropics"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_06.jpg' %}" alt="Meet the Model - Tropics">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_07.jpg' %}" alt="Under the sun in Cape Town" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_07.jpg' %}" alt="Under the sun in Cape Town">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_07.jpg' %}" alt="Under the sun in Cape Town"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_07.jpg' %}" alt="Under the sun in Cape Town">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_08.jpg' %}" alt="Hats to Suit Your Mood" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_08.jpg' %}" alt="Hats to Suit Your Mood">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_08.jpg' %}" alt="Hats to Suit Your Mood"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_08.jpg' %}" alt="Hats to Suit Your Mood">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_09.jpg' %}" alt="Meet the Model - Tropics" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_09.jpg' %}" alt="Meet the Model - Tropics">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_09.jpg' %}" alt="Meet the Model - Tropics"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_09.jpg' %}" alt="Meet the Model - Tropics">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_10.jpg' %}" alt="Under the sun in Cape Town" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_10.jpg' %}" alt="Under the sun in Cape Town">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_10.jpg' %}" alt="Under the sun in Cape Town"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_10.jpg' %}" alt="Under the sun in Cape Town">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_11.jpg' %}" alt="Hats to Suit Your Mood" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_11.jpg' %}" alt="Hats to Suit Your Mood">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_11.jpg' %}" alt="Hats to Suit Your Mood"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_11.jpg' %}" alt="Hats to Suit Your Mood">
+                        </a>
 
-</div>
-</div>
-<div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
-<div class="card border-0">
-<a href="blog-post-01.html" class="hover-shine card-img-top">
-<img data-cfsrc="{% static 'web/images/blog_12.jpg' %}" alt="Meet the Model - Tropics" style="display:none;visibility:hidden;">
-<img src="{% static 'web/images/blog_12.jpg' %}" alt="Meet the Model - Tropics">
-</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                    <div class="card border-0">
+                        <a href="blog-post-01.html" class="hover-shine card-img-top">
+                            <img data-cfsrc="{% static 'web/images/blog_12.jpg' %}" alt="Meet the Model - Tropics"
+                                style="display:none;visibility:hidden;">
+                            <img src="{% static 'web/images/blog_12.jpg' %}" alt="Meet the Model - Tropics">
+                        </a>
 
-</div>
-</div>
-</div>
+                    </div>
+                </div>
+            </div>
 
-</div>
-</section>
+        </div>
+    </section>
 </main>
 
 
