--- a/templates/web/product.html
+++ b/templates/web/product.html
@@ -2,6 +2,16 @@
 {% load static %}
 {% block content %}
 <main id="content">
+    <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13"
+        style="background-image: url('{% static 'web/images/bg-about-us.jpg' %}');">
+        <div
+            class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
+            <div class="container">
+                <p class="text-center text-white fs-20 font-weight-bold mb-4">Matanah</p>
+                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">Product</h1>
+            </div>
+        </div>
+    </section>
     <section class="py-8 page-title border-top mt-1">
         <div class="container">
             <h1 class="fs-40 mb-1 text-capitalize text-center">Shop All</h1>
