--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -8,11 +8,11 @@
             data-slick-options='{"slidesToShow": 1,"infinite":true,"autoplay":false,"dots":true,"arrows":false}'>
             <div class="box">
                 <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm"
-                    style="background-image: url('{% static 'web/images/bg-home-10.jpg' %}')">
+                    style="background-image: url('{% static 'web/images/web stainless bed banner.jpg' %}')">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <div class="container container-xxl">
-                            <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">STEEL FURNITURE FACTORY</p>
-                            <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">CREATIVE DESIGNS</h1>
+                            <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">STEEL FURNITURE FACTORY</p>
+                            <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">CREATIVE DESIGNS</h1>
                             <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
                                     class="btn btn-white text-uppercase letter-spacing-05 text-center"
                                     data-animate="fadeInUp">Shop
@@ -24,11 +24,11 @@
             </div>
             <div class="box">
                 <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm"
-                    style="background-image: url('{% static 'web/images/bg-home-10.jpg' %}')">
+                    style="background-image: url('{% static 'web/images/matanah 2.jpg' %}')">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <div class="container container-xxl">
-                            <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">MODERN STEEL FURNITURE</p>
-                            <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">TRUSTED QUALITY</h1>
+                            <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">MODERN STEEL FURNITURE</p>
+                            <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">TRUSTED QUALITY</h1>
                             <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
                                     class="btn btn-white text-uppercase letter-spacing-05 text-center"
                                     data-animate="fadeInUp">Shop
@@ -40,11 +40,11 @@
             </div>
             <div class="box">
                 <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm"
-                    style="background-image: url('{% static 'web/images/bg-home-10.jpg' %}')">
+                    style="background-image: url('{% static 'web/images/matanah banner 3.jpg' %}')">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <div class="container container-xxl">
-                            <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">FURNITURE & ACCESSORIES</p>
-                            <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">CUSTOM MADE PRODUCTS</h1>
+                            <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">FURNITURE & ACCESSORIES</p>
+                            <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">CUSTOM MADE PRODUCTS</h1>
                             <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
                                     class="btn btn-white text-uppercase letter-spacing-05 text-center"
                                     data-animate="fadeInUp">Shop
@@ -140,7 +140,7 @@
     </section>
     <section class="pb-11 pb-lg-15">
         <div class="container">
-            <h2 class="mb-8 text-center fs-30 fs-md-40">Essenstial Items</h2>
+            <h2 class="mb-8 text-center fs-30 fs-md-40">Featured Items</h2>
             <div class="row">
 
                 {% for products in product %}
@@ -449,7 +449,7 @@
                 <div class="col-lg-8 mb-6 mb-lg-0">
                     <div class="card border-0 banner banner-07">
                         <div class="card-img bg-img-cover-center"
-                            style="background-image: url('{% static 'web/images/c_01.jpg' %}')"></div>
+                            style="background-image: url('{% static 'web/images/banner web side.jpg' %}')"></div>
                         <div class="card-img-overlay d-inline-flex flex-column p-4 px-sm-7 py-sm-8">
                             <h3 class="card-title fs-30 fs-md-40">Pao by<br>
                                 chiandchi</h3>
@@ -462,7 +462,7 @@
                 <div class="col-lg-4">
                     <div class="card border-0 banner banner-07">
                         <div class="card-img bg-img-cover-center"
-                            style="background-image: url('{% static 'web/images/c_16.jpg' %}')"></div>
+                            style="background-image: url('{% static 'web/images/web side 02.jpg' %}')"></div>
                         <div class="card-img-overlay d-inline-flex flex-column align-items-center p-4 p-sm-7">
                             <h3 class="card-title fs-30 fs-md-34 mb-2">Soft Sofa</h3>
                             <!-- <div>
@@ -723,7 +723,7 @@
     <section style="background-color: #f7f7f7;">
         <div class="row align-items-center no-gutters room-inspiration">
             <div class="col-lg-6 order-1 order-lg-first">
-                <img data-cfsrc="{% static 'web/images/b-05.jpg' %}"><img src="{% static 'web/images/b-05.jpg' %}">
+                <img data-cfsrc="{% static 'web/images/b-05.jpg' %}"><img src="{% static 'web/images/web banner 04.jpg' %}">
             </div>
             <div class="col-lg-6 mb-6 mb-lg-0 order-first order-lg-1 ml-auto py-8 py-lg-0 content"
                 data-animate="fadeInRight">
