--- a/templates/web/gallery.html
+++ b/templates/web/gallery.html
@@ -14,29 +14,34 @@
 </div>
 </section> -->
     <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13"
-        style="background-image: url('{% static 'web/images/bg-about-us.jpg' %}');">
+        style="background-image: url('{% static 'web/images/about banner-01.jpg' %}');">
         <div
             class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
             <div class="container">
-                <p class="text-center text-white fs-20 font-weight-bold mb-4">Matanah</p>
-                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">Gallery</h1>
+                <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p>
+                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-black">Gallery</h1>
             </div>
         </div>
     </section>
     <section class="pt-10 pb-11 pb-lg-15">
         <div class="container">
-            <h2 class="fs-sm-40 mb-11 text-center">Our Journal</h2>
+            <h2 class="fs-sm-40 mb-11 text-center">Our Gallery</h2>
             <div class="row">
+
+                {% for images in gallery %}
                 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
                     <div class="card border-0">
-                        <a href="blog-post-01.html" class="hover-shine card-img-top">
-                            <img data-cfsrc="{% static 'web/images/blog_01.jpg' %}" alt="Under the sun in Cape Town"
+                        <a href="#" class="hover-shine card-img-top">
+                            <img data-cfsrc="{{images.image.crop.370x240}}" alt="Under the sun in Cape Town"
                                 style="display:none;visibility:hidden;">
-                            <img src="{% static 'web/images/blog_01.jpg' %}" alt="Under the sun in Cape Town">
+                            <img src="{{images.image.crop.370x240}}" alt="Under the sun in Cape Town">
                         </a>
 
                     </div>
                 </div>
+                {% endfor %}
+
+                 {% comment %}
                 <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
                     <div class="card border-0">
                         <a href="blog-post-01.html" class="hover-shine card-img-top">
@@ -147,6 +152,7 @@
 
                     </div>
                 </div>
+                {% endcomment %}
             </div>
 
         </div>
