Contact details adding

--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -13,10 +13,7 @@
     <section class="pt-10 pb-10">
         <div class="container">
             <!-- <h2 class="fs-sm-40 mb-10 text-center">Contact Us</h2> -->
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7824.813224842812!2d75.87424285!3d11.304961800000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65ce87a20fac9%3A0x3276df2e2890a37b!2sKunnamangalam%2C%20Kerala!5e0!3m2!1sen!2sin!4v1655448306188!5m2!1sen!2sin"
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1819.7614422367792!2d47.39538098239623!3d24.18846010384375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e254d9c1c505fe1%3A0xbb5721947d5445d0!2sMatanah%20Furniture%20Factory!5e0!3m2!1sen!2sin!4v1656049445152!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <!-- <div id="map" class="mapbox-gl map-point-animate" style="height: 535px" data-mapbox-access-token="pk.eyJ1IjoiZHVvbmdsaCIsImEiOiJjanJnNHQ4czExMzhyNDVwdWo5bW13ZmtnIn0.f1bmXQsS6o4bzFFJc8RCcQ" data-mapbox-options='{"center":[-106.53671888774004, 35.12362056187368],"setLngLat":[-106.53671888774004, 35.12362056187368],"zoom":5}' data-mapbox-marker='[{"position":[-106.53671888774004, 35.12362056187368],"className":"marker","backgroundImage":"images/marker-01.png","backgroundRepeat":"no-repeat","width":"70px","height":"70px"}]'></div> -->
         </div>
     </section>
@@ -62,14 +59,22 @@ browser for the next time I comment.</label>
                     </form>
                 </div>
                 <div class="col-md-4 pl-xl-13 pl-md-6">
-                    <p class="font-weight-bold text-primary mb-3">Address</p>
+                    <p class="font-weight-bold text-primary mb-3">Address 1</p>
                     <address class="mb-6">
-                        7895 Piermont Dr NE Albuquerque,<br>
-                        NM 198866, See Our Stores
+                        As Saadah District <br>
+                        Alkharj 16443-9451
                     </address>
-                    <p class="font-weight-bold text-primary mb-2">Infomation</p>
-                    <p class="mb-0">+391 (0)35 2568 4593</p>
-                    <p class="mb-7">hello@domain.com</p>
+                    <p class="font-weight-bold text-primary mb-3">Address 2</p>
+                    <address class="mb-6">
+                        Al Sabeel District <br>
+                        Old Makkah Road-Kilo 2 <br>
+                        Jeddah
+                    </address>
+                    <p class="font-weight-bold text-primary mb-2">Email</p>
+                    <p class="mb-7"><a href="mailto:info@matanahfurniture.com"> info@matanahfurniture.com</a></p>
+
+                    <p class="font-weight-bold text-primary mb-2">Phone</p>
+                    <p class="mb-7"><a href="tel:+966126301330"> +966126301330</a></p>
                 </div>
             </div>
         </div>
