--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -28,10 +28,10 @@
     </div> -->
     <div class="col-sm-6 col-lg">
     <ul class="list-inline text-lg-right">
-    <li class="list-inline-item mr-4"><a href="#" class="fs-20"><i class="fab fa-pinterest-p"></i></a></li>
-    <li class="list-inline-item mr-4"><a href="#" class="fs-20"><i class="fab fa-facebook-f"></i></a></li>
-    <li class="list-inline-item mr-4"><a href="#" class="fs-20"><i class="fab fa-instagram"></i></a></li>
-    <li class="list-inline-item"><a href="#" class="fs-20"><i class="fab fa-twitter"></i></a></li>
+    <li class="list-inline-item mr-4"><a href="https://www.facebook.com/matanahfurniture/info/?tab=page_info" class="fs-20"><i class="fab fa-facebook-f"></i></a></li>
+    <li class="list-inline-item mr-4"><a href="https://plus.google.com/b/106586490254808265379/106586490254808265379" class="fs-20"><i class="fab fa-google-plus-g"></i></a></li>
+    <li class="list-inline-item"><a href="https://twitter.com/matanahindia" class="fs-20"><i class="fab fa-twitter"></i></a></li>
+    <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCERtyRGe01zHuZsGb2RTX-Q/about" class="fs-20"><i class="fab fa-youtube-square"></i></i></a></li>
     </ul>
     <p class="mb-0 text-gray text-lg-right font-weight-500">
     © 2022 Matanah.<br>
