--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -606,11 +606,9 @@
                                 </li>
                             </ul>
                             <div class="pl-5 border-left-0 border-xl-left ml-auto d-none d-xl-block">
-                                <a href="#" class="d-flex align-items-center justify-content-end h-100 call-color">
+                                <a href="tel:+966126301330" class="d-flex align-items-center justify-content-end h-100 call-color">
                                     <span class="d-block mr-2"><i class="far fa-phone-alt"></i></span>Call us
-                                    (+1)
-                                    866 540
-                                    3229</a>
+                                    +966126301330</a>
                             </div>
                         </div>
                     </nav>
