--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -62,6 +62,20 @@
                             <img src="{% static 'web/images/Matanah Logo.png' %}" alt="Furnitor">
                         </a>
                     </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-12 pt-4">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
+                                <a href="tel:+966126301330" class="d-flex align-items-center justify-content-end h-100 call-color">
+                                    <span class="d-block mr-2"><i class="far fa-phone-alt phone-icon"></i></span>Call us
+                                    +966126301330</a>
+                            </div>
+                            <div class="col-lg-6 col-md-12 col-sm-12 text-left">
+                                <a href="https://wa.me/+9660532647031" class="d-flex align-items-center justify-content-xl-start h-100 call-color">
+                                    <span class="d-block mr-2"><i class="fab fa-whatsapp whatsapp-icon"></i></span>Whatsapp us
+                                    +9660532647031</a>
+                            </div>
+                        </div>
+                    </div>
                     <!-- <div class="col-xl-6">
     <form class="d-flex align-items-center h-100">
     <div class="input-group position-relative">
@@ -605,11 +619,7 @@
     </div> -->
                                 </li>
                             </ul>
-                            <div class="pl-5 border-left-0 border-xl-left ml-auto d-none d-xl-block">
-                                <a href="tel:+966126301330" class="d-flex align-items-center justify-content-end h-100 call-color">
-                                    <span class="d-block mr-2"><i class="far fa-phone-alt"></i></span>Call us
-                                    +966126301330</a>
-                            </div>
+                            
                         </div>
                     </nav>
                 </div>
