--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -12,8 +12,23 @@
         </section>
     <section class="pt-10 pb-10">
         <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="d-flex">
+                        <i class="fa fa-location  loaction-icon"></i><h3>Al Kharj- Riyadh </h3>
+                    </div>
+                    
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1819.7614422367792!2d47.39538098239623!3d24.18846010384375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e254d9c1c505fe1%3A0xbb5721947d5445d0!2sMatanah%20Furniture%20Factory!5e0!3m2!1sen!2sin!4v1656049445152!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="d-flex">
+                        <i class="fa fa-location  loaction-icon"></i><h3>Jeddah</h3>
+                    </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1560.9414124460698!2d39.203219847922675!3d21.485567961758186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c3cefb3f1a76af%3A0x228c239b9ce6aa9d!2sMATANAH%20For%20Furniture%20%26%20Steel%20Cabinets!5e0!3m2!1sen!2sin!4v1656415235454!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
             <!-- <h2 class="fs-sm-40 mb-10 text-center">Contact Us</h2> -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1819.7614422367792!2d47.39538098239623!3d24.18846010384375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e254d9c1c505fe1%3A0xbb5721947d5445d0!2sMatanah%20Furniture%20Factory!5e0!3m2!1sen!2sin!4v1656049445152!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           
             <!-- <div id="map" class="mapbox-gl map-point-animate" style="height: 535px" data-mapbox-access-token="pk.eyJ1IjoiZHVvbmdsaCIsImEiOiJjanJnNHQ4czExMzhyNDVwdWo5bW13ZmtnIn0.f1bmXQsS6o4bzFFJc8RCcQ" data-mapbox-options='{"center":[-106.53671888774004, 35.12362056187368],"setLngLat":[-106.53671888774004, 35.12362056187368],"zoom":5}' data-mapbox-marker='[{"position":[-106.53671888774004, 35.12362056187368],"className":"marker","backgroundImage":"images/marker-01.png","backgroundRepeat":"no-repeat","width":"70px","height":"70px"}]'></div> -->
         </div>
     </section>
@@ -71,10 +86,26 @@ browser for the next time I comment.</label>
                         Jeddah
                     </address>
                     <p class="font-weight-bold text-primary mb-2">Email</p>
-                    <p class="mb-7"><a href="mailto:info@matanahfurniture.com"> info@matanahfurniture.com</a></p>
+                    <p><a href="mailto:info@matanahfurniture.com"> info@matanahfurniture.com</a></p>
+                    <p class="mb-7"><a href="mailto:sales@matanahfurniture.com"> sales@matanahfurniture.com</a></p>
 
                     <p class="font-weight-bold text-primary mb-2">Phone</p>
-                    <p class="mb-7"><a href="tel:+966126301330"> +966126301330</a></p>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <p class="font-weight-bold text-primary mb-2">Sales </p>
+                            <p><a href="tel:+966532647031">+966 532647031</a></p>
+                            <p><a href="tel:+966569585268">+966 569585268</a></p>
+                             <p class="mb-7"><a href="tel:+966538452675">+966 538452675</a></p>
+                        </div>
+                        <div class="col-lg-6">
+                            <p class="font-weight-bold text-primary mb-2">Office</p>
+                            <p class="mb-7"><a href="tel:+9660126301330"> +966 0126301330</a></p>
+                        </div>
+                        
+                    </div>
+                    
+
+                    
                 </div>
             </div>
         </div>
