Uploaded to geany

--- a/templates/web/product.html
+++ b/templates/web/product.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main id="content">
     <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13"
-        style="background-image: url('{% static 'web/images/about banner-01.jpg' %}');">
+        style="background-image: url('{% static 'web/images/matanah2.jpg' %}');">
         <div
             class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
             <div class="container">
