--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <main id="content">
-    <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13" style="background-image: url('{% static 'web/images/about banner-01.jpg' %}');">
+    <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13" style="background-image: url('{% static 'web/images/matanah2.jpg' %}');">
         <div class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
         <div class="container">
         <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p>
